opam-version: "2.0"
maintainer: "zandoye@gmail.com"
authors: [ "ZAN DoYe" ]
homepage: "https://github.com/kandu/dyn-glyph/"
bug-reports: "https://github.com/kandu/dyn-glyph/issues"
license: "MIT"
dev-repo: "git+https://https://github.com/kandu/dyn-glyph"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.08.1"}
  "dune" {>= "1.6.0"}
  "core_unix" {>= "v0.15"}
  "god"
]
synopsis: ""
description: """
"""
